# ehrv-semi-mo

./: CMakeLists.txt  README.md  config.txt  process_01.txt  process_02.txt  process_03.txt  process_04.txt  process_05.txt  process_06.txt  process_07.txt  process_08.txt  process_09.txt  process_10.txt
src/: main.cpp
src/components/desktop/: Desktop.cpp
src/components/taskbar/: Taskbar.cpp  Taskbar.h
src/core/: GUIApplication.cpp  UIManager.cpp  UIManager.h
src/scheduler/: CPUWorker.cpp  CPUWorker.h  Config.h  FCFSScheduler.cpp  FCFSScheduler.h  Instruction.h  Process.cpp  Process.h  Scheduler.cpp  Scheduler.h
